<resources>
    <string name="app_name">Learning App</string>
    <string name="no_network">Es ist keine Netzwerkverbindung vorhanden. Bitte stellen sie sicher, dass sie eine aufrechte Verbindung haben.</string>
    <string name="frage_gespeichert">Ihre Frage wurde erfolgreich gespeichert.</string>
    <string name="frage_nicht_erstellt">Ihre Frage konnte nicht erstellt werden</string>
    <string name="frage_bearbeiten_validation_fehler">Fehldende Eingaben</string>
    <string name="location_nicht_moeglich">GPS Koordinaten nicht möglich. Default Koordinaten übernommen</string>
    <string name="menu_fragen_anzeigen">Fragen anzeigen</string>
    <string name="menu_fragen_erstellen">Fragen erstellen</string>
    <string name="menu_eigene_fragen">Eigene Fragen</string>
    <string name="menu_einstellungen">Einstellungen</string>
    <string name="frage_bearbeiten_frage">Frage</string>
    <string name="frage_bearbeiten_frage_hint">Eingabe der Frage</string>
    <string name="frage_bearbeiten_antwort">Antwort</string>
    <string name="frage_bearbeiten_antwort_hint">Eingabe der Antwort</string>
    <string name="frage_bearbeiten_schwierigkeit">Schwierigkeitsgrad</string>
    <string name="frage_bearbeiten_kategorie">Kategorie</string>
    <string name="frage_bearbeiten_position">Position</string>
    <string name="frage_bearbeiten_aktuelle_position">47.0880728;15.439806500000032</string>
    <string name="frage_bearbeiten_bild">Bild</string>
    <string name="frage_bearbeiten_bild_hint">Bild-URL hier eingeben </string>
    <string name="frage_bearbeiten_erstellen">Frage erstellen</string>
    <string name="frage_bearbeiten_speichern">Frage speichern</string>
    <string name="frage_bearbeiten_error_loading">Gewünschte Frage konnte nicht geladen werden.</string>
    <string name="eigene_fragen_header">Meine erstellten Fragen</string>
    <string name="eigene_fragen_fehler">Es wurden keine eigenen Fragen geladen.</string>
    <string name="auswahl_alle_kategorien">Alle Fragen</string>
    <string name="auswahl_kategorie">nach Kategorie</string>
    <string name="auswahl_umgebung">Fragen in der Umgebung</string>
    <string name="auswahl_schwierigkeit">nach Schwierigkeit</string>
    <string name="auswahl_wiederholungsfragen">Wiederholungsfragen</string>
    <string name="auswahl_eigenefragen">Eigene Fragen</string>
    <string name="auswahl_kategorien_fehler">Kategorien konnten nicht geladen werden.</string>
    <string name="detail_antwort_einblenden">Antwort</string>
    <string name="detail_frage">Frage</string>
    <string name="detail_antwort">Antwort</string>
    <string name="detail_wiederholen">Merken</string>
    <string name="detail_teilen">Teilen</string>
    <string name="detail_wiederholen_gemerkt">Gemerkt</string>
    <string name="detail_frage_bottom">Frage</string>
    <string name="detail_keine_weiteren_fragen">Letzte Frage erreicht</string>
    <string name="detail_keine_vorherigen_fragen">Erste Frage erreicht</string>
    <string name="detail_frage_gemerkt">Frage wurde zur Wiederholung vorgemerkt</string>
    <string name="detail_frage_gemerkt_aufgehoben">Wiederholung aufgehoben</string>
    <string name="detail_teilen_einleitung_nachricht">Bitte um Hilfe</string>
    <string name="einstellungen_max_fragen">max. Fragen pro Runde</string>
    <string name="einstellungen_gps_umkreis">GPS Umkreis in km</string>
    <string name="einstellungen_benutzername">Benutzername</string>
    <string name="einstellungen_schwierigkeit">Schwierigkeitsgrad</string>
    <string name="einstellungen_anzahl_fragen_ueberspringen">Anz. Fragen überspr.</string>
    <string name="einstellungen_testfragen_hinzufuegen">Testfragen</string>
    <string name="einstellungen_testfragen_erstellt">Testfragen erfolgreich erstellt</string>
    <string name="einstellungen_testfragen_loeschen">Go4-Testfragen</string>
    <string name="einstellungen_testfragen_geloescht">Testfragen erfolgreich gelöscht</string>
    <string name="einstellungen_speichern">Einstellungen speichern</string>
    <string name="frage_geladen">Frage geladen</string>
    <string name="fragen_geladen">Fragen geladen</string>
    <string name="keine_fragen_verfuegbar">Es sind keine Fragen verfügbar.</string>
    <string name="auswahl_schwierigkeit_hinweis">Fragen werden aufgrund der definierten Schwierigkeit in den Einstellungen geladen</string>
    <string name="einstellungen_gespeichert">Ihre Einstellungen wurden erfolgreich gespeichert</string>
    <string name="einstellungen_alle_testfragen_loeschen">Alle Testfragen</string>
    <string name="title_activity_maps">Map</string>
    <string name="detail_gps_fehler">Keine GPS-Verbindung möglich, gehe zurück!</string>

</resources>
