<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FrageBearbeitenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/speichern_button_height"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/frage_erstellen_row_space"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView_Frage"
                    android:layout_width="@dimen/frage_erstellen_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/frage_bearbeiten_frage" />

                <EditText
                    android:id="@+id/editText_Frage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frage_bearbeiten_frage_hint"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/frage_erstellen_row_space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_Antwort"
                    android:layout_width="@dimen/frage_erstellen_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/frage_bearbeiten_antwort" />

                <EditText
                    android:id="@+id/editText_Antwort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frage_bearbeiten_antwort_hint"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/frage_erstellen_row_space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_Schwierigkeit"
                    android:layout_width="@dimen/frage_erstellen_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/frage_bearbeiten_schwierigkeit" />

                <Spinner
                    android:id="@+id/editText_Schwierigkeit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/frage_erstellen_row_space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_Kategorie"
                    android:layout_width="@dimen/frage_erstellen_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/frage_bearbeiten_kategorie" />

                <EditText
                    android:id="@+id/editText_Kategorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:inputType="text"
                    android:selectAllOnFocus="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/frage_erstellen_row_space"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView_Position"
                    android:layout_width="@dimen/frage_erstellen_label_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/frage_bearbeiten_position" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/frage_erstellen_row_space"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_Bild"
                    android:layout_width="@dimen/frage_erstellen_label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/frage_bearbeiten_bild" />

                <EditText
                    android:id="@+id/editText_bild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/frage_bearbeiten_bild_hint"
                    android:inputType="textUri"
                    android:selectAllOnFocus="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/maintenanceSpeichernButton"
        style="@style/SpeichernButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/default_fragen_erstellen_color"
        android:onClick="frageSpeichern"
        android:text="@string/frage_bearbeiten_erstellen" />

</RelativeLayout>
