<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragen_auswahl_space"
    tools:context="at.campus02.gang_of_four.learningapp.FragenAuswahlActivity">

    <!--<Space-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_weight="0.5" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fragen_auswahl_space"
            android:layout_weight="1"
            android:background="@color/default_fragen_color"
            android:gravity="center"
            android:onClick="alleFragenClick"
            android:padding="10dp"
            android:text="@string/auswahl_alle_kategorien" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fragen_auswahl_space"
            android:layout_weight="1"
            android:background="@color/default_fragen_color"
            android:gravity="center"
            android:onClick="fragenNachKategorieClick"
            android:padding="10dp"
            android:text="@string/auswahl_kategorie" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fragen_auswahl_space"
            android:layout_weight="1"
            android:background="@color/default_fragen_color"
            android:gravity="center"
            android:onClick="fragenNachGpsUmkreisClick"
            android:padding="10dp"
            android:text="@string/auswahl_umgebung" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fragen_auswahl_space"
            android:layout_weight="1"
            android:background="@color/default_fragen_color"
            android:gravity="center"
            android:onClick="wiederholungsFragenClick"
            android:padding="10dp"
            android:text="@string/auswahl_wiederholungsfragen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/fragen_auswahl_space"
            android:layout_weight="1"
            android:background="@color/default_fragen_color"
            android:gravity="center"
            android:onClick="eigeneFragenClick"
            android:padding="10dp"
            android:text="@string/auswahl_eigenefragen" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
