<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.campus02.gang_of_four.learningapp.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:text="@string/einstellungen_max_fragen" />

            <EditText
                android:id="@+id/maxFragen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/einstellungen_max_fragen"
                android:inputType="number"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:text="@string/einstellungen_gps_umkreis" />

            <EditText
                android:id="@+id/gpsUmkreis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/einstellungen_gps_umkreis"
                android:inputType="number"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:text="@string/einstellungen_benutzername" />

            <EditText
                android:id="@+id/benutzername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/einstellungen_benutzername"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:text="@string/einstellungen_schwierigkeit" />

            <Spinner
                android:id="@+id/schwierigkeit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="150dp"
                android:text="@string/einstellungen_anzahl_fragen_ueberspringen" />

            <EditText
                android:id="@+id/fragenUeberspringen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/einstellungen_anzahl_fragen_ueberspringen"
                android:inputType="number"
                android:selectAllOnFocus="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/SpeichernButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/default_settings_color"
        android:onClick="einstellungenSpeichern"
        android:text="@string/einstellungen_speichern" />
</RelativeLayout>
