<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.campus02.gang_of_four.learningapp.MainActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingLeft="50dp"
        android:drawableLeft="@drawable/ic_play_arrow_black_48dp"
        android:text="@string/menu_fragen_anzeigen"
        android:onClick="fragenAnzeigen"
        android:background="@android:color/holo_green_light" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingLeft="50dp"
        android:drawableLeft="@drawable/ic_add_black_48dp"
        android:text="@string/menu_fragen_erstellen"
        android:onClick="fragenErstellen"
        android:background="@android:color/holo_blue_light" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingLeft="50dp"
        android:drawableLeft="@drawable/ic_settings_black_48dp"
        android:text="@string/menu_einstellungen"
        android:onClick="einstellungenOeffnen"
        android:background="@android:color/holo_purple" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
