<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frageAnzeigeRootlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrageAnzeigeActivity">

    <LinearLayout
        android:id="@+id/frageAnzeigeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="invisible">

        <TextView
            android:id="@+id/frageAnzeigeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Geografie (2):"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/fragen_anzeige_header_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/frageAnzeigeFrage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Was ist die Hauptstadt des Bundeslandes Steiermark?"
            android:textSize="@dimen/fragen_anzeige_textsize" />

        <ImageView
            android:id="@+id/frageAnzeigeFrageFoto"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/bayern_logo" />

        <TextView
            android:id="@+id/frageAnzeigeAntwort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/detail_antwort"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/fragen_anzeige_textsize" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/frageAnzeigeButtonAnwortEinblenden"
                style="@style/BasicButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/default_fragen_color"
                android:onClick="showAntwortClick"
                android:padding="5dp"
                android:text="@string/detail_antwort_einblenden"
                android:textSize="14dp" />

            <Button
                android:id="@+id/frageAnzeigeWiederholungsfrage"
                style="@style/BasicButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/default_fragen_color"
                android:onClick="wiederholungsFrageClick"
                android:padding="5dp"
                android:text="@string/detail_wiederholen"
                android:textSize="14dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/frageAnzeigeNavigator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/detail_frage_bottom"
            android:textSize="18dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragenKategorieProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:foregroundGravity="fill"
            android:indeterminate="true"
            android:visibility="visible" />
    </RelativeLayout>
</RelativeLayout>
